2011-03-01  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_garcol.d (split_gen0_on_holes) [MULTITHREAD]: correctly mark the
	end of old generation (it is possible the split-hole to be for
	read-only pinned object)

2011-02-17  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (XLIB:CREATE-GCONTEXT):
	use error_required_keywords()
	Reported by Peter Van Eynde <pvaneynd@debian.org>

2011-02-11  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (WITH_DEFERRED_INTERRUPTS): fix typo in name and really
	execute deferred interrupts
	* spvw.d (create_thread): allow interrupts in newly created threads
	* zthread.d (thread_stub): defer interrupts until low level per thread
	variables are initialized

2010-12-30  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	* pathname.d (classify_namestring) [WIN32_NATIVE]: fixed condition.

2010-12-29  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	Fix for bug#3144993: OS:FILE-INFO crashes when file's times
	are corrupted (Y2.04k bug)
	* time.d (convert_time_to_universal) [WIN32_NATIVE]: use 64 bit
	when dividing ticks by ticks_per_second, because universal time
	exceeds 32 bits around year 2035.

2010-12-10  Sam Steingold  <sds@gnu.org>

	Fix bug#3124200: setting *DEFAULT-PATHNAME-DEFAULTS* breaks REQUIRE
	* init.lisp (open-for-load): accept ignore-pathname-defaults and
	do not call MERGE-PATHNAMES if it is non-NIL;
	use PROBE-PATHNAME instead of DIRECTORY to probe for a directory
	(load): accept :IGNORE-PATHNAME-DEFAULTS and pass it to OPEN-FOR-LOAD;
	pathname merging is done in OPEN-FOR-LOAD
	(search-file): call PATHNAME instead of MERGE-PATHNAMES on the
	argument to avoid being killed by *DEFAULT-PATHNAME-DEFAULTS*
	* defs1.lisp (with-augmented-load-path): do not use UNION since
	the augmentations must come first in *LOAD-PATHS*
	(simple-require): pass :IGNORE-PATHNAME-DEFAULTS T to LOAD

2010-12-10  Sam Steingold  <sds@gnu.org>

	* modules/asdf/asdf.lisp: update to upstream "2.011"