@@ -1,6 +1,0 @@
-.release
-build*
-ansi-tests
-gnulib
-tags
-TAGS
