@@ -1,4 +1,0 @@
-*.fas
-*.lib
-*.log
-*.tst
