@@ -1,19 +1,0 @@
-html
-impnotes.fo
-impnotes.pdf
-impnotes.tex
-impnotes.texi
-impnotes.xml
-impnotes-src.zip
-*.err
-clisp.1
-clisp.html
-clisp.xml
-clisp-link.1
-clisp-link.html
-clisp-link.xml
-*.tdb
-catalog.xml
-docbook-xsl
-docbook-dtd
-id-href.map
