@@ -1,135 +1,0 @@
-*.ilk
-*.i.c
-*.i
-*.opt
-*.pdb
-*.sbr
-autom4te.cache
-localcharset.h
-config.h
-makefile*
-makemake
-comment5
-intparam.h
-clisp.h
-ANNOUNCE
-CLOS-guide.txt
-config.lisp
-COPYRIGHT
-editors.txt
-GNU-GPL
-LISP-tutorial.txt
-SUMMARY
-README
-README.de
-README.en
-README.es
-UnicodeDataFull.txt
-clisp.1
-clisp.man
-clisp.html
-clisp.png
-impnotes.html
-ansidecl
-txt2c
-ccmp2c
-stage
-suite
-clisp-link
-makevars
-full
-locale
-sigsegv
-ari80386.s
-ari80386.c
-aridecl.c
-arilev0.c
-arilev1.c
-arilev1c.c
-arilev1e.c
-arilev1i.c
-array.c
-avl.c
-built.c
-bytecode.c
-cflags.h
-cflags.h.stamp
-charstrg.c
-clisp.c
-compelem.c
-comptran.c
-constobj.c
-constpack.c
-constsym.c
-control.c
-debug.c
-dfloat.c
-encoding.c
-error.c
-errunix.c
-errwin32.c
-eval.c
-ffloat.c
-flo_konv.c
-flo_rest.c
-foreign.c
-fsubr.c
-genclisph.c
-graph.c
-hashtabl.c
-i18n.c
-iconv.h
-int2adic.c
-intbyte.c
-intcomp.c
-intdiv.c
-intelem.c
-intgcd.c
-intlog.c
-intmal.c
-intplus.c
-intprint.c
-intread.c
-intserial.c
-intsqrt.c
-io.c
-lfloat.c
-lisparit.c
-lispbibl.c
-gen.lispbibl.c
-list.c
-misc.c
-noreadline.c
-package.c
-pathname.c
-posixmath.c
-posixmisc.c
-predtype.c
-pseudofun.c
-rational.c
-realelem.c
-realrand.c
-realtran.c
-record.c
-sequence.c
-sfloat.c
-sigsegv.h
-socket.c
-sort.c
-sp80386.c
-spvw*.c
-stream.c
-subr.c
-subrkw.c
-symbol.c
-time.c
-trampoline_r.h
-unix.c
-unixaux.c
-vacall_r.h
-weak.c
-win32.c
-win32aux.c
-xthread.c
-stdbool.h
-stdint.h
