@@ -1,2 +1,0 @@
-Makefile
-tmp
